# dylint

./: .dockerignore  .gitattributes  .github_token  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PR_DESCRIPTION.md  README.md  clippy.toml  dylint.toml  rustfmt.toml
.github/: dependabot.yml
building/: Cargo.toml  README.md
building/src/: lib.rs
cargo-dylint/: Cargo.toml  README.md
cargo-dylint/fixtures/array_pattern/: Cargo.toml
cargo-dylint/fixtures/depinfo_dylint_libs/: Cargo.toml
cargo-dylint/fixtures/library_packages_in_dylint_toml/: Cargo.toml  dylint.toml
cargo-dylint/fixtures/no_deps/: Cargo.toml
cargo-dylint/src/: main.rs
cargo-dylint/tests/: boundary_toolchains.rs  ci.rs  custom_toolchain.rs  depinfo_dylint_libs.rs  dylint.rs  dylint_driver_path.rs  fix.rs  library_packages.rs  list.rs  markdown_link_check.json  metadata.rs  nightly_toolchain.rs  package_options.rs  prettier_ignore.txt  publishers.txt  supply_chain.json  test_log.rs  warn.rs
cargo-dylint/tests/duplicate_dependencies/: aarch64-apple-darwin.txt  x86_64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
cargo-dylint/tests/integration/: boundary_toolchains.rs  custom_toolchain.rs  depinfo_dylint_libs.rs  dylint_driver_path.rs  fix.rs  library_packages.rs  list.rs  main.rs  nightly_toolchain.rs  no_deps.rs  package_options.rs  warn.rs
cargo-dylint/tests/supply_chain/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows-msvc.json  x86_64-unknown-linux-gnu.json
driver/: Cargo.toml  README.md  rust-toolchain
driver/.cargo/: config.toml
driver/src/: lib.rs
dylint/: Cargo.toml  README.md  build.rs
dylint-link/: Cargo.toml  README.md  build.rs
dylint-link/src/: main.rs
dylint/src/: driver_builder.rs  error.rs  lib.rs  library_builder.rs  metadata.rs  name_toolchain_map.rs  opts.rs  package_options.rs  toml.rs
dylint/src/library_packages/: mod.rs
dylint/src/metadata/: mod.rs
dylint/src/name_toolchain_map/: maybe_library.rs  mod.rs
dylint/src/package_options/: backup.rs  bisect.rs  clippy_utils.rs  common.rs  mod.rs  revs.rs
dylint/tests/: alpine.rs
dylint/tests/alpine/: Dockerfile
examples/: Cargo.toml  README.md
examples/allow_clippy/: Cargo.toml  README.md  rust-toolchain
examples/allow_clippy/.cargo/: config.toml
examples/allow_clippy/src/: allow_clippy.rs  lib.rs
examples/allow_clippy/ui/: main.rs  main.stderr
examples/await_holding_span_guard/: Cargo.toml  rust-toolchain
examples/await_holding_span_guard/src/: await_holding_span_guard.rs  lib.rs
examples/await_holding_span_guard/ui/: main.rs  main.stderr
examples/clippy/: Cargo.toml  rust-toolchain
examples/clippy/src/: lib.rs
examples/clippy/tests/: ui.rs
examples/crate_wide_allow/: Cargo.toml  README.md
examples/crate_wide_allow/src/: lib.rs
examples/env_cargo_path/: Cargo.toml  rust-toolchain
examples/env_cargo_path/src/: env_cargo_path.rs  lib.rs
examples/env_cargo_path/ui/: main.stderr
examples/env_literal/: Cargo.toml  README.md
examples/env_literal/src/: env_literal.rs  lib.rs
examples/env_literal/ui/: main.stderr
examples/experimental/: README.md
examples/experimental/derive_opportunity/: Cargo.toml  README.md  rust-toolchain
examples/experimental/disallowed_pattern/: Cargo.toml  README.md  build.rs
examples/experimental/missing_doc_comment_llm/: Cargo.toml  README.md
examples/experimental/missing_doc_comment_openai/: Cargo.toml  README.md  rust-toolchain
examples/experimental/overscoped_allow/: Cargo.toml  README.md  rust-toolchain
examples/general/: Cargo.toml  README.md  rust-toolchain
examples/general/abs_home_path/: Cargo.toml  README.md
examples/general/arg_iter/: Cargo.toml  README.md  test.rs
examples/general/await_holding_span_guard/: Cargo.toml  README.md
examples/general/basic_dead_store/: Cargo.toml  README.md
examples/general/crate_wide_allow/: Cargo.toml  README.md
examples/inconsistent_qualification/: Cargo.toml
examples/non_thread_safe_call_in_test/: Cargo.toml  README.md  rust-toolchain
examples/nonreentrant_function_in_test/: Cargo.toml  README.md  rust-toolchain
examples/path_separator_in_string_literal/: Cargo.toml  README.md  rust-toolchain
examples/question_mark_in_expression/: Cargo.toml  README.md  rust-toolchain
examples/redundant_reference/: Cargo.toml
examples/restriction/: Cargo.toml  README.md  rust-toolchain
examples/src/: lib.rs
examples/straggler/: Cargo.toml  rust-toolchain
examples/supplementary/: Cargo.toml  README.md  rust-toolchain
examples/testing/: README.md
examples/tests/: lib.rs  test_readme.rs
examples/try_io_result/: Cargo.toml  README.md  rust-toolchain
expensive/: Cargo.toml
expensive/tests/: Dockerfile  alpine.rs  auto_correct.rs  boundary_toolchains.rs  custom_toolchain.rs
fixtures/depinfo_dylint_libs/: Cargo.toml
fixtures/name_toolchain_map/: Cargo.toml
internal/: .gitignore  Cargo.toml  README.md  build.rs  template.tar
internal/src/: build.rs  cargo.rs  clippy_utils.rs  command.rs  config.rs  env.rs  examples.rs  filename.rs  git.rs  home.rs  lib.rs  match_def_path.rs  msrv.rs  packaging.rs  paths.rs  rustup.rs  sed.rs  testing.rs
internal/template/: Cargo.toml  Cargo.toml~  README.md  rust-toolchain
match_hir/: Cargo.toml  clippy.toml  rust-toolchain
match_hir/.cargo/: config.toml
match_hir/assets/: README.txt  hir.rs
match_hir/reflective_match/: Cargo.toml
match_hir/src/: binding.rs  error.rs  hir_node.rs  lib.rs  span_hir_id_map.rs  syntax.rs  type_name.rs  visitable.rs
match_hir/tests/: meta.rs  reflective_match_exact.stderr  reflective_match_wildcard.stderr
nightly/: Cargo.toml  build.rs
nightly/src/: lib.rs
scheduled/: Cargo.toml
scheduled/duplicate_dependencies/: aarch64-apple-darwin.txt  x86_64-apple-darwin.txt  x86_64-pc-windows-msvc.txt  x86_64-unknown-linux-gnu.txt
scheduled/supply_chain/: aarch64-apple-darwin.json  x86_64-apple-darwin.json  x86_64-pc-windows-msvc.json  x86_64-unknown-linux-gnu.json
scheduled/tests/: scheduled.rs
(+696 files in other folders)
