# smoelius: `dylint_driver`, `dylint_linting`, and the library template are in their own workspaces
# because they require specific Rust components.

[workspace]
exclude = ["driver", "internal/template", "utils/linting"]
members = [
    "cargo-dylint",
    "dylint",
    "dylint-link",
    "examples",
    "expensive",
    "internal",
    "nightly",
    "scheduled",
    "utils/testing",
]
resolver = "2"

[workspace.dependencies]
anstyle = "1.0"
anyhow = "1.0"
assert_cmd = "2.2"
bitflags = "2.11"
cargo-util = "0.2"
cargo-util-schemas = "0.13"
cargo_metadata = "0.23"
chrono = { version = "0.4", default-features = false }
clap = "4.6"
compiletest_rs = "0.11"
ctor = "1.0"
dunce = "1.0"
env_logger = "0.11"
fs_extra = "1.3"
git2 = "0.20"
glob = "0.3"
heck = "0.5"
hex = "0.4"
home = "0.5"
log = "0.4"
nested_workspace = "0.7"
once_cell = "1.21"
predicates = "3.1"
regex = "1.12"
rewriter = "0.2"
rustc-stable-hash = "0.1"
rustversion = "1.0"
semver = "1.0"
serde = "1.0"
serde-untagged = "0.1"
serde_json = "1.0"
similar-asserts = "2.0"
snapbox = "1.2"
syntect = { version = "5.3", default-features = false }
tar = "0.4"
tempfile = "3.27"
thiserror = "2.0"
toml = "1.1"
toml_edit = "0.25"
url = "2.5"
walkdir = "2.5"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
option-if-let-else = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
significant-drop-tightening = "allow"
struct-field-names = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = [
    "cfg(coverage)",
    "cfg(dylint_lib, values(any()))",
    "cfg(nightly)",
    "cfg(__cargo_cli)",
    "cfg(__library_packages)",
]

[workspace.metadata.dylint]
libraries = [
    { path = "examples/general" },
    { path = "examples/supplementary" },
    { path = "examples/testing/clippy" },
    { path = "examples/restriction/*" },
]

[workspace.metadata.unmaintained]
ignore = [
    "bincode",
    "dirs-sys-next",
    "miow",
    "num_cpus",
    "serde-value",
    "tester",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
]
