[package]
name = "dylint_building"
version = "0.1.0-pre.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Utiltities for building Dylint libraries"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = "1.0.38"
log = "0.4.14"
