[package]
name = "cargo-dylint"
version = "2.6.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A tool for running Rust lints from dynamic libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"
rust-version = "1.72"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4", features = ["cargo", "derive", "wrap_help"] }
env_logger = "0.10"

dylint = { version = "=2.6.1", path = "../dylint", features = [
    "package_options",
] }
dylint_internal = { version = "=2.6.1", path = "../internal" }

[dev-dependencies]
assert_cmd = "2.0"
cargo_metadata = "0.18"
ctor = "0.2"
glob = "0.3"
log = "0.4"
once_cell = "1.19"
predicates = "3.1"
regex = "1.10"
sedregex = "0.2"
semver = "1.0"
serde_json = "1.0"
similar-asserts = "1.5"
tempfile = "3.9"
walkdir = "2.4"

dylint_internal = { version = "=2.6.1", path = "../internal", features = [
    "testing",
] }

[features]
default = ["cargo-lib"]
cargo-lib = ["dylint/__cargo_lib"]
cargo-cli = ["dylint/__cargo_cli"]
__clap_headings = []
