[package]
name = "dylint_driver"
version = "4.0.1"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Dylint driver library"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = "1.0"
libc = "0.2"
libloading = "0.8"
log = "0.4"
rustversion = "1.0"
serde_json = "1.0"

dylint_internal = { version = "=4.0.1", path = "../internal", features = [
    "rustup",
] }

[dev-dependencies]
rustc_version = "0.4"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../examples/general" },
    { path = "../examples/supplementary" },
    { path = "../examples/testing/clippy" },
    { path = "../examples/restriction/*" },
]
