[package]
name = "dylint_driver"
version = "5.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Dylint driver library"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

build = "build/main.rs"

[dependencies]
anyhow = "1.0"
libc = "0.2"
libloading = "0.9"
log = "0.4"
rustversion = "1.0"
serde_json = "1.0"

dylint_internal = { version = "=5.0.0", path = "../internal", features = [
    "rustup",
] }

[build-dependencies]
anyhow = "1.0"
curl = "0.4"
git2 = "0.20"
proc-macro2 = "1.0"
rustversion = "1.0"
syn = { version = "2.0", features = ["full"] }

dylint_internal = { version = "=5.0.0", path = "../internal", features = [
    "clippy_utils",
    "rustup",
] }

[dev-dependencies]
rustc_version = "0.4"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../examples/general" },
    { path = "../examples/supplementary" },
    { path = "../examples/testing/clippy" },
    { path = "../examples/restriction/*" },
]
