[package]
name = "dylint-link"
version = "3.1.2"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A wrapper around Rust's default linker to help create Dyling libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
if_chain = "1.0"
toml_edit = "0.22"

dylint_internal = { version = "=3.1.2", path = "../internal", features = [
    "cargo",
] }

[build-dependencies]
dylint_internal = { version = "=3.1.2", path = "../internal" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

dylint_internal = { version = "=3.1.2", path = "../internal", features = [
    "packaging",
] }

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
cc = "1.1"
