[package]
name = "dylint-link"
version = "4.1.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A wrapper around Rust's default linker to help create Dyling libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
if_chain = { workspace = true }
toml_edit = { workspace = true }

dylint_internal = { version = "=4.1.0", path = "../internal", features = [
    "cargo",
] }

[build-dependencies]
dylint_internal = { version = "=4.1.0", path = "../internal" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

dylint_internal = { version = "=4.1.0", path = "../internal", features = [
    "packaging",
] }

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
cc = "1.2"
