[package]
name = "dylint-link"
version = "5.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A wrapper around Rust's default linker to help create Dylint libraries"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
toml = { workspace = true }

dylint_internal = { version = "=5.0.0", path = "../internal", features = [
    "cargo",
    "rustup",
] }

[build-dependencies]
dylint_internal = { version = "=5.0.0", path = "../internal" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

dylint_internal = { version = "=5.0.0", path = "../internal", features = [
    "packaging",
] }

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
cc = "1.2"
