[package]
name = "dylint_examples"
version = "3.3.0"
description = "A dummy package for testing the example Dylint libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
cargo-util = "0.2"
cargo_metadata = "0.19"
toml_edit = "0.22"
walkdir = "2.5"

dylint_internal = { version = "=3.3.0", path = "../internal", features = [
    "clippy_utils",
    "examples",
] }

[lints]
workspace = true
