[package]
name = "dylint_examples"
version = "3.4.1"
description = "A dummy package for testing the example Dylint libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
cargo-util = { workspace = true }
cargo_metadata = { workspace = true }
toml_edit = { workspace = true }
walkdir = { workspace = true }

dylint_internal = { version = "=3.4.1", path = "../internal", features = [
    "clippy_utils",
    "examples",
] }

[lints]
workspace = true
