[package]
name = "expensive"
description = "Expensive tests"
version = "4.1.1"
edition = "2024"
publish = false

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

dylint_internal = { version = "=4.1.1", path = "../internal", features = [
    "clippy_utils",
    "rustup",
    "testing",
] }

[lints]
workspace = true
