[package]
name = "expensive"
description = "Expensive tests"
version = "6.0.1"
edition = "2024"
publish = false

[dev-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
snapbox = { workspace = true }
tempfile = { workspace = true }

dylint_internal = { version = "=6.0.1", path = "../internal", features = [
    "clippy_utils",
    "rustup",
    "testing",
] }

[lints]
workspace = true
