[package]
name = "dylint_internal"
version = "5.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Dylint internals"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trailofbits/dylint"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }

anstyle = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }
cargo-util = { workspace = true, optional = true }
cargo_metadata = { workspace = true, optional = true }
ctor = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
home = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[features]
cargo = ["anstyle", "bitflags", "cargo_metadata", "home"]
clippy_utils = ["git", "semver", "tempfile", "toml", "toml_edit"]
config = ["cargo_metadata", "serde", "thiserror", "toml"]
examples = ["cargo", "cargo-util", "rustup", "walkdir"]
git = ["git2"]
home = ["dep:home"]
match_def_path = []
packaging = ["cargo", "tar"]
rustup = ["cargo_metadata"]
testing = ["ctor", "env_logger", "packaging"]

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["home"]
