[package]
name = "scheduled"
description = "Scheduled tests"
version = "5.0.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { workspace = true }

dylint_internal = { version = "=5.0.0", path = "../internal" }

[lints]
workspace = true
