[package]
name = "allow_clippy"
version = "2.0.0"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A tongue-in-cheek example of a Dylint library"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# smoelius: `allow_clippy` is intentionally held back.
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "c995a8b5017766246ac5cfe66baa074eeee3a5a3"}
if_chain = "1.0.2"

dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]

