[package]
name = "await_holding_span_guard"
version = "2.0.0"
authors = ["David Barsky"]
description = "A lint to check for Span guards held while calling await inside an async function"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "ui"
path = "ui/main.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "c995a8b5017766246ac5cfe66baa074eeee3a5a3"}
if_chain = "1.0.2"

dylint_internal = { path = "../../internal" }
dylint_linting = { path = "../../utils/linting" }

[dev-dependencies]
tracing = "0.1.32"

dylint_testing = { path = "../../utils/testing", features = ["dylint_driver_local"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dylint]
libraries = [
    { path = "../*" },
]
